--- a/results-summary-component-main/style.css
+++ b/results-summary-component-main/style.css
@@ -8,6 +8,10 @@ body {
     font-family: 'Hanken Grotesk', sans-serif;
     font-size: 18px;
     color: #cbc7fe;
+    height: 100vh;
+    display: grid;
+    justify-content: center;
+    align-items: center;
 }
 main {
     width: 350px;
